fixed overflow

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -7,6 +7,7 @@ html {
 body {
     font-family: 'Montserrat', sans-serif !important;
     color: rgb(136, 146, 176) !important;
+    background-color: rgb(10, 25, 47);
 }
 
 body h2, h4 {
@@ -83,7 +84,7 @@ body a:hover {
 
 .btn {
     border-radius: 4px;
-    background: linear-gradient(to right, #67b26b, #4ca2cb) !important;
+    background: linear-gradient(to right, #64ffda, #4ca2cb) !important;
     border: none;
     color: #FFFFFF;
     text-align: center;
@@ -240,6 +241,10 @@ li:nth-child(even) .projects-picture {
     width: 50%;
     float: right;
     height: 100%;
+    opacity: 0.4;
+}
+li:nth-child(even) .projects-picture:hover {
+    opacity: 1;
 }
 
 li:nth-child(odd) .text {
@@ -258,4 +263,8 @@ li:nth-child(odd) .projects-picture {
     width: 50%;
     float: left;
     height: 100%;
+    opacity: 0.4;
+}
+li:nth-child(odd) .projects-picture:hover {
+    opacity: 1;
 }
